JDK21 minimum is only for 3.x
Signed-off-by: Daniel Widdis <widdis@gmail.com>